--- a/src/stories/Task.stories.mdx
+++ b/src/stories/Task.stories.mdx
@@ -1,15 +1,10 @@
+import { Meta } from '@storybook/addon-docs'
+
+<Meta title="Task" />
+
 # Тестовое задание
 
 Это набор элементов использующихся в конструкторе страниц. Есть глобальная тема со стилями по умолчанию. Для каждого эелемента можно задавать конкректные стили.
-
-## Запуск
-
-```
-git clone git@github.com:person0b/frontend-test.git
-yarn
-yarn storybook
-```
-
 
 ## Задача
 
