--- a/src/stories/Task.stories.mdx
+++ b/src/stories/Task.stories.mdx
@@ -17,3 +17,7 @@ import { Meta } from '@storybook/addon-docs'
 - Элемент таблицы является примером, того как можно изпользовать тему и кастомные стили.
 - Кастомные стили могут использовать значения из темы или конкректные значения.
 - Дизайн элемента, параметры, события и кастомные стили на усмотрение выполняющего.
+
+## Отправка результата
+
+Ответ принимается через **Pull request** в [репозиторий](https://github.com/person0b/frontend-test) или ссылкой на форк и деплой куда угодно
