--- a/src/stories/Task.stories.mdx
+++ b/src/stories/Task.stories.mdx
@@ -4,7 +4,7 @@ import { Meta } from '@storybook/addon-docs'
 
 # Тестовое задание
 
-Это набор элементов использующихся в конструкторе страниц. Есть глобальная тема со стилями по умолчанию. Для каждого эелемента можно задавать конкректные стили.
+Это набор элементов использующихся в конструкторе страниц. Есть глобальная тема со стилями по умолчанию. Для каждого элемента можно задавать конкректные стили.
 
 ## Задача
 
@@ -14,10 +14,10 @@ import { Meta } from '@storybook/addon-docs'
 
 ## Примечание
 
-- Элемент таблицы является примером, того как можно изпользовать тему и кастомные стили.
+- Элемент таблицы является примером, того как можно использовать тему и кастомные стили.
 - Кастомные стили могут использовать значения из темы или конкректные значения.
 - Дизайн элемента, параметры, события и кастомные стили на усмотрение выполняющего.
 
 ## Отправка результата
 
-Ответ принимается через **Pull request** в [репозиторий](https://github.com/person0b/frontend-test) или ссылкой на форк и деплой куда угодно
+Ответ принимается через **Pull request** в <a href="https://github.com/person0b/frontend-test" target="_blank">репозиторий</a> или ссылкой на форк и деплой куда угодно
